--- a/css/main.css
+++ b/css/main.css
@@ -7,25 +7,25 @@
 
 @font-face {
   font-family: Montserrat-Bold;
-  src: url('../fonts/montserrat/Montserrat-Bold.ttf'); 
+  src: url('../fonts/montserrat/Montserrat-Bold.ttf');
 }
 
 @font-face {
   font-family: Montserrat-SemiBold;
-  src: url('../fonts/montserrat/Montserrat-SemiBold.ttf'); 
+  src: url('../fonts/montserrat/Montserrat-SemiBold.ttf');
 }
 
 @font-face {
   font-family: Montserrat-Regular;
-  src: url('../fonts/montserrat/Montserrat-Regular.ttf'); 
+  src: url('../fonts/montserrat/Montserrat-Regular.ttf');
 }
 
 /*//////////////////////////////////////////////////////////////////
 [ RESTYLE TAG ]*/
 
 * {
-	margin: 0px; 
-	padding: 0px; 
+	margin: 0px;
+	padding: 0px;
 	box-sizing: border-box;
 }
 
@@ -181,7 +181,7 @@ iframe {
 .btn-show-contact100 {
   font-family: Montserrat-Bold;
   font-size: 12px;
-  color: #846add;
+  color: #559C3C;
   text-transform: uppercase;
   letter-spacing: 1px;
 
@@ -198,7 +198,7 @@ iframe {
 
 .btn-show-contact100:hover {
   color: #fff;
-  background-color: #846add;
+  background-color: #559C3C;
 }
 
 
@@ -206,7 +206,7 @@ iframe {
 /*==================================================================
 [ Content container ]*/
 .container-contact100 {
-  width: 100%;  
+  width: 100%;
   min-height: 100vh;
   display: -webkit-box;
   display: -webkit-flex;
@@ -217,7 +217,7 @@ iframe {
   justify-content: center;
   align-items: center;
   padding: 15px;
-  background: rgba(132,106,221,0.8);
+  background: rgba(0,255,0,0.3);
   position: relative;
   z-index: 10;
 }
@@ -257,7 +257,7 @@ iframe {
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
   overflow: hidden;
-  
+
   padding: 30px 15px 30px 15px;
 }
 
@@ -355,7 +355,7 @@ textarea.input100 {
   pointer-events: none;
   border: 1px solid;
   border-radius: 2px;
-  border-color: #846add;
+  border-color: #559C3C;
 
   visibility: hidden;
   opacity: 0;
@@ -384,7 +384,7 @@ textarea.input100 {
 }
 
 .input100:focus + .focus-input100 + .label-input100 {
-  color: #846add;
+  color: #559C3C;
 }
 
 
@@ -421,7 +421,7 @@ textarea.input100 {
   min-width: 160px;
   height: 42px;
   border-radius: 21px;
-  background: #846add;
+  background: #559C3C;
 
   box-shadow: 0 10px 30px 0px rgba(132, 106, 221, 0.5);
   -moz-box-shadow: 0 10px 30px 0px rgba(132, 106, 221, 0.5);
